fix vertical align for article footer icons

--- a/_scss/_icon.scss
+++ b/_scss/_icon.scss
@@ -4,6 +4,7 @@
   width: 16px;
   display: inline-block;
   opacity: .7;
+  vertical-align: middle;
   &:hover, &:active{
     opacity: 1;
   }
