--- a/style.scss
+++ b/style.scss
@@ -270,10 +270,6 @@ header {
     }
     .footer {
       opacity: .6;
-      span:not(:first-child) {
-        margin-left: 1em;
-      }
-
     }
     &:hover, &:active {
       .footer {
